@@ -16,11 +16,7 @@ import com.lowdragmc.lowdraglib2.registry.RegistrationEnvironment;
 import com.lowdragmc.lowdraglib2.registry.annotation.LDLRegisterClient;
 import com.lowdragmc.lowdraglib2.test.TestEditor;
 import com.lowdragmc.lowdraglib2.test.TestProject;
-import com.lowdragmc.lowdraglib2.uitest.ElementRef;
-import com.lowdragmc.lowdraglib2.uitest.ScenarioBuilder;
-import com.lowdragmc.lowdraglib2.uitest.ScenarioOptions;
-import com.lowdragmc.lowdraglib2.uitest.TestContext;
-import com.lowdragmc.lowdraglib2.uitest.UIScenario;
+import com.lowdragmc.lowdraglib2.uitest.*;
 import com.lowdragmc.lowdraglib2.uitest.input.Keys;
 import net.minecraft.network.chat.Component;
 import org.jetbrains.annotations.Nullable;
@@ -247,7 +243,7 @@ public class ResourceViewTabStripScenario implements UIScenario {
                         g.step("no tab is cut off by the strip", ResourceViewTabStripScenario::checkTabsFit);
                         g.check("the browser tab is still at the head of it", ctx -> {
                             var view = resourceView(ctx);
-                            return view.tabView.tabHeaderContainer.getChildren().getFirst()
+                            return view.tabView.tabHeaderContainer.getChildren().get(0)
                                     == view.getAssetBrowserTab()
                                     && view.tabView.tabHeaderContainer.getChildren().get(1)
                                     == view.pinnedTabSeparator;
@@ -523,7 +519,7 @@ public class ResourceViewTabStripScenario implements UIScenario {
             ctx.check("exactly one drop marker is showing", markers.size() == 1, 1, markers.size());
             if (markers.size() == 1) {
                 var container = resourceView(ctx).tabView.tabScroller.viewContainer;
-                ctx.log("the marker is at index " + container.getChildren().indexOf(markers.getFirst().element())
+                ctx.log("the marker is at index " + container.getChildren().indexOf(markers.get(0).element())
                         + " of " + container.getChildren().size());
             }
         });
