@@ -229,6 +229,6 @@ public class UIDebuggerWindowScenario implements UIScenario {
     }
 
     private static int clamp(int value, int limit) {
-        return Math.clamp(value, 0, limit - 1);
+        return Math.max(Math.min(value, limit - 1), 0);
     }
 }
